--- a/Project-Calculator/main.html
+++ b/Project-Calculator/main.html
@@ -18,19 +18,19 @@
             <button class="control-button" id="sevenBtn">7</button>
             <button class="control-button" id="eightBtn">8</button>
             <button class="control-button" id="nineBtn">9</button>
-            <button class="control-button" id="addBtn">+</button>
+            <button class="control-button op" id="addBtn">+</button>
             <button class="control-button" id="fourBtn">4</button>
             <button class="control-button" id="fiveBtn">5</button>
             <button class="control-button" id="sixBtn">6</button>
-            <button class="control-button" id="subBtn">-</button>
+            <button class="control-button op" id="subBtn">-</button>
             <button class="control-button" id="oneBtn">1</button>
             <button class="control-button" id="twoBtn">2</button>
             <button class="control-button" id="threeBtn">3</button>
-            <button class="control-button" id="mulBtn">x</button>
+            <button class="control-button op" id="mulBtn">x</button>
             <button class="control-button" id="zeroBtn">0</button>
             <button class="control-button" id="dotBtn">.</button>
             <button class="control-button" id="equalBtn">=</button>
-            <button class="control-button" id="divBtn">÷</button>
+            <button class="control-button op" id="divBtn">÷</button>
         </div>
     </div>
 </body>
